--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -273,7 +273,10 @@ Deletes the 2nd person in the address book.
 `delete 1 3 7` +
 Deletes the 1st, 3rd, 7th person in the results of the `find` command.
 
-=== (Un)Favoriting a person : `favorite`
+
+// tag::favorite[]
+=== Favoriting a person : `favorite`
+
 
 Favorites the specified person from the address book so they will appear on top of the contact list or unfavorite a favorited person. +
 Format: `favorite INDEX`
@@ -284,6 +287,11 @@ Format: `favorite INDEX`
 * The index *must be a positive integer* 1, 2, 3, ...
 ****
 
+[NOTE]
+====
+To un-favorite a person, simply input the `favorite` command again with the person's index
+====
+
 Examples:
 
 * `list` +
@@ -292,7 +300,7 @@ Favorite the 3rd person in the address book.
 * `find Betsy` +
 `favorite 1` +
 Favorite the 1st person in the results of the `find` command.
-
+// end::favorite[]
 
 === Selecting a person : `select`
 
