--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -425,7 +425,7 @@ _Figure 4.1.10 : UndoRedoStack Activity Diagram_
 **Pros:** We do not need to maintain a separate stack, and just reuse what is already in the codebase. +
 **Cons:** Requires dealing with commands that have already been undone: We must remember to skip these commands. Violates Single Responsibility Principle and Separation of Concerns as `HistoryManager` now needs to do two different things. +
 // end::undoredo[]
-
+// tag::help[]
 === Displaying the Usage of a Specific Command [Since v1.2]
 
 This function is an enhancement of the exisitng help function, which opens the help command. The modification allows the help command to take in an optional command identifier argument. If the command identifier is specified, the result display will display the usage of the command specified. Otherwise, help window will be opened. This enhancement requires modifications in the Model and Logic components of the application.
@@ -492,7 +492,7 @@ The `HelpCommand` execution is done in `AddressBookParser`. _Figure 4.2.5_ below
 
 image::HelpEnhancementScreenShot.PNG[width="800"]
 _Figure 4.2.5 : Output of `HelpCommand` execution_
-
+// end::help[]
 //tag::locate[]
 === Locating a contact's address [Since v1.2]
 
