--- a/docs/team/ArchanaPradeep.adoc
+++ b/docs/team/ArchanaPradeep.adoc
@@ -3,9 +3,10 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
-== Project: AddressBook - Level 4
-AddressBook - Level 4 is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
+== Project: The Myth's Book
+The Myth’s Book is an address book dedicated for university students to store useful information such as websites, phone numbers and emails of the people around them for personal usage. The application helps students to keep track of birthday dates and upcoming events through a calendar and facilitate convenient access to their friend’s website and even Google Maps location through the in-built browser panel in the application. Furthermore, there are many useful tools such as finding group tags (e.g. friends, neighbours) and switching themes for better user preference and usability.
 
+The Myth’s Book is a Command Line Input based software which helps caters to students who are efficient and comfortable in typing out command line inputs to manipulate with information of their contacts in the address book. The Myth’s Book is a software application that is coded in Java programming language.
 *Code contributed*: [https://github.com/CS2103AUG2017-T15-B3/main/blob/master/collated/main/archthegit.md[Functional code]] [https://github.com/CS2103AUG2017-T15-B3/main/blob/master/collated/test/archthegit.md[Test code]][https://github.com/CS2103AUG2017-T15-B3/main/blob/master/collated/unused/archthegit.md[Unused code]]
 
 === Enhancement Added: Modified find Command (V1.0)
@@ -23,8 +24,7 @@ include::../UserGuide.adoc[tag=find]
 
 ==== Justification
 
-Modifying the find command was necessary as my teammates and I found it unfriendly that we could'nt search for a part
-of somebody's name. Since we fit into the same category as our target users we thought the users would feel the same.
+Modifying the find command was necessary as my teammates and I found it unfriendly that we could'nt search for a part of somebody's name. Since we fit into the same category as our target users we thought the users would feel the same.
 
 I designed it so that the search only works if the substring is 2 characters or longer.As searching for one character might
 not filter out anybody in The Myth's Book at all.
@@ -55,8 +55,7 @@ include::../UserGuide.adoc[tag=find]
 
 ==== Justification
 
-It was the first part of a two part modification. For university students, storing of birthdays would be a valuable addition. This
-would also help me implement reminders for birthdays in the later versions of the application.
+It was the first part of a two part modification. For university students, storing of birthdays would be a valuable addition. This would also help me implement reminders for birthdays in the later versions of the application.
 
 ---
 
@@ -100,8 +99,7 @@ include::../UserGuide.adoc[tag=reminder]
 
 ==== Justification
 
-Made a birthday reminder so that university students can check if their friend's have birthdays today. This is
-a rather useful feature for students as they usually celebrate birthdays.
+Made a birthday reminder so that university students can check if their friend's have birthdays today. This is a rather useful feature for students as they usually celebrate birthdays.
 
 ==== Implementation
 
@@ -120,4 +118,5 @@ include::../DeveloperGuide.adoc[tag=birthday]
 === Other contributions
 
 * Fixed bugs in the details panel ( Pull request https://github.com/CS2103AUG2017-T15-B3/main/pull/130)
+* Acceptance testing feedback given to `Team T09-B2` [https://github.com/CS2103AUG2017-T09-B2/main/issues?q=is%3Aissue+is%3Aclosed [Issues]]
 
