--- a/docs/team/oscarwang.adoc
+++ b/docs/team/oscarwang.adoc
@@ -4,7 +4,10 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :stylesDir: ../stylesheets
 
 == LISA: Levels Integrated Secretarial Agent
-LISA: Levels Integrated Secretarial Agent is a desktop address book application designed for insurance agents to manage the complex relationship between the providers and clients. It is developed by enhancing the original program "addressbook-level4" provided in class for teaching Software Engineering principles. While the main user interactions happen across CLI, LISA also has a GUI built with JavaFX. It is written in Java, and has about 6 kLoC.
+LISA: Levels Integrated Secretarial Agent is a desktop address book application designed for insurance agents to manage the complex relationship between the providers and clients.
+While the main user interactions happen across CLI, it also has a GUI built with JavaFX.
+LISA is developed by enhancing the original program "addressbook-level4" provided in class for teaching Software Engineering principles.
+The original program is written in Java, and has about 6 kLoC.
 
 *Code contributed*: [https://github.com/CS2103AUG2017-T13-B1/main/tree/master/collated/main/OscarWang114.md[Functional code]] [https://github.com/CS2103AUG2017-T13-B1/main/tree/master/collated/test/OscarWang114.md[Test code]]
 
@@ -23,7 +26,8 @@ include::../UserGuide.adoc[tag=add]
 
 ==== Justification
 
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
+As a user, I can add contacts even if I only know his/her name.
+In reality, it is unreasonable to require users to provide complete information of a person when adding his/her as a contact.
 
 ==== Implementation
 
@@ -36,7 +40,7 @@ include::../DeveloperGuide.adoc[tag=add]
 
 ---
 
-=== Enhancement Added: Life Insurances
+=== Enhancement Added: Reading and Storing Life Insurances
 
 ==== External behavior
 
@@ -51,14 +55,15 @@ include::../UserGuide.adoc[tag=li]
 
 ==== Justification
 
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
+This feature serves as a precursor of the implementation for the user story: As an insurance agent, I can specify the provider-client relationship among my contacts.
+
 
 ==== Implementation
 
 ---
 #Start of Extract [from: Developer Guide]#
 
-include::../DeveloperGuide.adoc[tag=ali]
+include::../DeveloperGuide.adoc[tag=li]
 
 #End of Extract#
 
@@ -79,7 +84,8 @@ include::../UserGuide.adoc[tag=addli]
 
 ==== Justification
 
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
+This feature is an implementation of the user story: As an insurance agent, I can specify the provider-client relationship among my contacts.
+It is crucial for LISA to allow insurance agents to create insurances, a provider-client relationship in the contacts.
 
 ==== Implementation
 
@@ -100,5 +106,6 @@ include::../DeveloperGuide.adoc[tag=addli]
 
 === Other contributions
 
-- Reviewed the majority of the Pull Requests submitted by other team members.
-- Assisted several members personally in programming, debugging, and Git-related issues.
+- Reviewed the majority of the pull requests submitted by other team members.
+- Assisted several team members personally in programming, debugging, and Git-related issues.
+- Reported bugs in other team's product in acceptance testing. [https://github.com/CS2103AUG2017-F11-B3/main/issues/74[Bug 1]] [https://github.com/CS2103AUG2017-F11-B3/main/issues/73[Bug 2]]
