Fix aboutus link

--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -34,7 +34,7 @@ PR review and bug searching/debugging.
 
 === RATTANIN SIRIPORNPITAK
 image::rsjunior37.jpg[width="150", align="left"]
-image:githubicon.png[Github Icon, 40, 40, link="https://github.com/RSJunior37"] image:portfolio.png[Portfolio Icon, 40, 40, link="team/rsjunior.adoc"]
+image:githubicon.png[Github Icon, 40, 40, link="https://github.com/RSJunior37"] image:portfolio.png[Portfolio Icon, 40, 40, link="team/rattaninsiripornpitak.adoc"]
 
 Role: Developer +
 Responsibilities:
