--- a/docs/team/raisakabir.adoc
+++ b/docs/team/raisakabir.adoc
@@ -3,7 +3,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
-== Project: AddressBook - Level 4
+== Project: Mobilize
 Mobilize is a desktop application built to help people organize their contacts and tasks. It is primarily written
 in Java and uses the Object Oriented Paradigm. The user interacts with it using a CLI, and it has a GUI created with JavaFX.
 
