--- a/docs/team/ernestong.adoc
+++ b/docs/team/ernestong.adoc
@@ -16,7 +16,7 @@ link:{collatedDir}/test/Ernest.md[Test code] +
 === Enhancement Added
 Shorthand Command Alias +
 Update consistency of results displayed:
-Regardless of inputs, Name, Address and Tags are stored/shown with first letter +
+Regardless of inputs, Name and Address are stored/shown with first letter +
 of the word capitalized and the rest in small letters. +
 Email will all be in small letters. +
 Bloodtype will all be capitalized.
